fixed media query for dark mode icon

--- a/src/styles/components/head.module.css
+++ b/src/styles/components/head.module.css
@@ -37,3 +37,9 @@
     background-repeat: no-repeat;
     background-position:center left;
 }
+
+@media screen and (max-width: 450px) {
+    .subContainer > button {
+        background-image: none;
+    }
+}
